[tool.poetry]
name = "Knowledge-Graph"
version = "0.1.0"
description = ""
authors = ["Mirko Lenz <info@mirko-lenz.de>"]

[tool.poetry.dependencies]
python = "^3.7"
neo4j = "^1.7"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
